﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.01060817, see misc/*.deps* for details
 - build: ↑1
 - configure: +1 ↑1
 - develop: +55 -2 (recommends: -1, suggests: +1 ↑1)
 - runtime: (recommends: +1)
 - test: +3 ↑1 -2 (recommends: +1)

0.01060817 2013-04-10T06:25:04Z
 [Dependencies::Stats]
 - Dependencies changed since 0.01060816, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +5 (suggests: ↑1)
 - test: ↑1

 [Documentation]
 - Update copyright year
 - Add README.mkdn

 [Meta]
 - Bug tracker to github issues

 [Packaging]
 - Utilise test_requires in Build.PL

0.01060816 2012-03-13T06:22:02Z
 - Maintenance Release

 [Dependencies::Stats]
 - Dependencies changed since 0.01060815, see misc/*.deps* for details
 - develop: (recommends: ↑1, suggests: ↑1)
 - runtime: +3
 - test: -1

 [Internals]
 - Move $VERSION declarations out of BEGIN
 - Declare $AUTHORITY in all namespaces.

 [Packaging]
 - Update LICENSE (  Year, Indent, Address )
 - Moved release/author tests to xt/
 - Move github uri's to https://
 - add x_authority to meta
 - move to git versions
 - regenerate compile tests.

0.01060815 2011-04-14T03:32:21Z
 - Maintenance release.

 [Dependencies::Stats]
 - Dependencies changed since 0.01002312, see misc/*.deps* for details
 - build: +1
 - configure: +1
 - develop: +1 (recommends: +1, suggests: +1)
 - runtime: +4 ↓4 -2
 - test: +4

 [Documentation]
 - Fixed a few POD spelling issues.

 [Packaging]
 - Move to @Author::KENTNL
 - Stop shipping Makefile.PL
 - perlcriticrc moved to perlcritic.rc and made more strict.
 - add .gitignore.
 - Changes reworked to CPAN::Changes form.

 [Tests]
 - removed hand-coded critic/kwalitee tests.
 - added report-versions-tiny
 - added CPAN::Changes
 - added DistMeta
 - added EOL
 - added generated kwalitee
 - added generated critic

0.01002312 2009-09-18T00:54:27Z
 - Use Moose's Trait Attribute Helpers

 [Dependencies::Stats]