@@ -4,7 +4,7 @@ Search::GIN::Extract::ClassMap - Delegate Extraction based on class.
 
 # VERSION
 
-version 0.01060818
+version 1.000000
 
 # SYNOPSIS
 
