@@ -5,9 +5,9 @@ license = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
-git_versions  = 1
+bumpversions  = 1
 normal_form   = numify
-mantissa      = 8
+mantissa      = 6
 srcreadme     = mkdn
 
 ;twitter_extra_hash_tags = #
