@@ -6,6 +6,8 @@ package Search::GIN::Extract::ClassMap::Isa;
 
 # ABSTRACT: Map Extractors based on an objects inheritance
 
+our $VERSION = '1.000000';
+
 # AUTHORITY
 
 use Moose qw( with blessed );
