@@ -6,6 +6,8 @@ package Search::GIN::Extract::ClassMap::Like;
 
 # ABSTRACT: Map Extractors based on what an objects inheritance or roles
 
+our $VERSION = '1.000000';
+
 # AUTHORITY
 
 use Moose qw( with blessed );
