@@ -6,6 +6,8 @@ package Search::GIN::Extract::ClassMap::Types;
 
 # ABSTRACT: Types for Search::GIN::Extract::ClassMap, mostly for coercing.
 
+our $VERSION = '1.000000';
+
 # AUTHORITY
 
 use MooseX::Types::Moose qw( :all );
